--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,34 +9,18 @@ security:
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
+        user_provider:
             entity:
-                class: App\Entity\UserAccount
-                property: email
+                class: App\Entity\User
+                property: apiToken
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: app_user_provider
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-            form_login:
-                # "login" is the name of the route
-                login_path: login
-                check_path: login
-                enable_csrf: true
-                default_target_path: main
-            remember_me:
-                secret:   '%kernel.secret%' # required
-                lifetime: 2419200 # 4 weeks in seconds
-            logout:
-                path: logout
+            provider: user_provider
+            logout: ~
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
