ingredient GET n security cleanup

--- a/.env
+++ b/.env
@@ -26,3 +26,5 @@ APP_SECRET=9de733264cf1a9cc51dfc2e1cc05a5eb
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 DATABASE_URL="postgresql://potato-api:potato-api@potato-api-db:5432/potato-api?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+API_TOKEN=test
