--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
         "symfony/security-core": "6.0.*",
+        "symfony/serializer": "6.0.*",
         "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^3.3"
