--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,7 @@
-controllers:
-    resource: ../src/Controller/
+v1_controllers:
+    resource: ../src/Controller/V1
     type: annotation
+    prefix: /v1/
 
 kernel:
     resource: ../src/Kernel.php
