--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,4 @@ SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 FOUNDRY_RESET_MODE=migrate
+DATABASE_URL="postgresql://potato-api:potato-api@potato-api-db:5432/potato-api_test?serverVersion=14&charset=utf8"
